# TuvaLLM

./: .gitignore  2993349-tuvalu-language.doc  AGENTS.md  CLAUDE.md  DATA.md  PIPELINE_LOG.md  README.md  pyproject.toml  requirements.txt
.claude/skills/: tuvaluan-grammar.md
data/processed/: llm_scores_combined.json
data/test/udhr_sample/: README.txt  benchmark_results.json  metadata.json  reference.txt
data/transcripts/: mms_samoan_transcript.json  whisper_transcripts_20260120_133822.json
scripts/: align_text_to_transcript.py  analyze_audio.py  analyze_vocab.py  anchor_align.py  benchmark_udhr.py  check_mms_langs.py  check_smo_vocab.py  compare_models.py  ctc_forced_align.py  evaluate_model.py  finetune_mms.py  finetune_whisper_lora.py  inference_server.py  inspect_transcripts.py  iterative_improve.py  llm_score_segments.py  merge_anchor_sources.py  merge_llm_scores.py  orthography.py  prepare_dataset.py  prepare_dataset_v6.py  prepare_llm_scoring.py  prepare_training_data.py  preprocess_audio.py  run_full_pipeline.sh  sequence_align.py  test_whisper.py  transcribe_mms.py  transcribe_whisper.py  transcribe_whisper_english.py  transcribe_with_mms.py  transcribe_word_timestamps.py  transcript_corrector.py  tuvaluan_grammar.py  vad_segment.py  verify_alignment.py  verify_processor.py  word_align.py
src/tuvallm/: __init__.py  core.py
tests/: __init__.py  conftest.py  test_benchmark.py  test_core.py  test_data_pipeline.py  test_orthography.py  test_transcription.py  test_tuvaluan_grammar.py
tests/fixtures/: sample_corrections.json
(+1 files in other folders)
